# hello-compiler

./: .gitignore  Cargo.toml
src/: lib.rs
src/backend/: mod.rs
src/frontend/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/ir/: basic_block.rs  function.rs  instruction.rs  mod.rs  module.rs  operand.rs  types.rs  value.rs
src/optimizer/: mod.rs  pass_manager.rs
src/optimizer/passes/: const_fold.rs  cse.rs  dce.rs  mod.rs  ssa_renumber.rs
src/tools/vcc/: main.rs
src/tools/vilas/: main.rs
src/tools/vildis/: main.rs
src/tools/vlink/: main.rs
tests/: optimizer_pass_manager.rs  pass_dependencies.rs  passes_renumber.rs  passmanager_advanced.rs
